--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.komodoproject
 
 # Deployment script
-/deploy.sh
+deploy.sh
 
 # See https://help.github.com/articles/ignoring-files for more about ignoring files.
 #
