--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
+    "@rails/ujs": "^6.0.3-1",
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
+    "easy-autocomplete": "^1.3.5",
     "jquery": "^3.5.1",
+    "js-autocomplete": "^1.0.4",
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
