--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
     "easy-autocomplete": "^1.3.5",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.3",
     "js-autocomplete": "^1.0.4",
     "pg": "^8.7.3",
     "popper.js": "^1.16.1",
+    "rails_admin": "3.1.1",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
@@ -22,5 +23,8 @@
     "@types/pg": "^8.6.5",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.7.2"
+  },
+  "resolutions": {
+    "rails_admin/@fortawesome/fontawesome-free": "^5.15.0"
   }
 }
