--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^7.0.4-1",
     "@rails/ujs": "^6.0.3-1",
     "@rails/webpacker": "^5.4.3",
+    "@tailwindcss/forms": "^0.5.3",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
