--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
     "easy-autocomplete": "^1.3.5",
+    "flowbite": "^1.6.3",
     "jquery": "^3.6.3",
     "js-autocomplete": "^1.0.4",
     "pg": "^8.7.3",
     "popper.js": "^1.16.1",
     "rails_admin": "3.1.1",
     "toastr": "^2.1.4",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "version": "0.1.0",
   "devDependencies": {
